// PygmyMarmoset gradle build script
///////////////////////////////////////////////////////////////////////
// Tasks
///////////////////////////////////////////////////////////////////////

def uberJarStagingDir = "${rootProject.layout.buildDirectory.get()}/uberJarStaging"
def launcherProject = project(':PygmyMarmosetLauncher')
def webappProject = project(':PygmyMarmosetWebapp')

tasks.register('uberJar', Jar) {
	dependsOn(':copyWebappFiles', ':copyLauncherFiles', ':copyLauncherDeps', ':copyConfigProperties', ':copyLog4j2Properties')
	manifest {
		attributes([
				'Main-Class' : 'edu.ycp.cs.pygmymarmoset.main.UberjarMain',
				'Multi-Release' : 'true'
		])
	}
	destinationDirectory = rootProject.layout.buildDirectory.dir('.')
	archiveBaseName = rootProject.project.name
	from uberJarStagingDir
}


tasks.register('copyWebappFiles', Copy) {
	dependsOn(':PygmyMarmosetWebapp:war')
	from {
		def webappLibDir = webappProject.base.getLibsDirectory().getAsFile().get()
		zipTree("${webappLibDir}/PygmyMarmosetWebapp.war")
	}
	into "$uberJarStagingDir/war"
	exclude 'META-INF/**'
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}


tasks.register('copyLauncherFiles', Copy) {
	dependsOn(':PygmyMarmosetLauncher:compileJava')
	from launcherProject.sourceSets.main.output.classesDirs
	into uberJarStagingDir
	duplicatesStrategy = DuplicatesStrategy.WARN
}


tasks.register('copyLauncherDeps', Copy) {
	dependsOn(':PygmyMarmosetLauncher:compileJava')
	from {
		launcherProject.configurations.compileClasspath.collect {
			it.isDirectory() ? it : zipTree(it)
		}
	}
	into uberJarStagingDir
	exclude(
			'about*',
			'**/*.java',
			'module-info.class',
			'META-INF/*.SF',
			'META-INF/*.DSA',
			'META-INF/*.RSA',
			'META-INF/DEPENDENCIES*',
			'META-INF/*.tld',
			'META-INF/MANIFEST.MF',
			'META-INF/LICENSE*',
			'META-INF/NOTICE*',
			'META-INF/versions/9/module-info.class'
	)
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}


tasks.register('copyConfigProperties', Copy) {
	from rootProject.projectDir
	into "${uberJarStagingDir}/war/WEB-INF/classes"
	include 'pygmymarmoset.properties'
	doFirst {
		if (inputs.sourceFiles.empty)
			throw new StopExecutionException("No pygmymarmoset.properties found")
	}
}


tasks.register('copyLog4j2Properties', Copy) {
	from rootProject.projectDir
	into uberJarStagingDir
	include 'log4j2.properties'
	doFirst {
		if (inputs.sourceFiles.empty)
			throw new StopExecutionException("No log4j2.properties found")
	}
}


tasks.register('clean', Delete) {
	delete rootProject.layout.buildDirectory
}


subprojects {
	group = 'edu.ycp.cs.pygmymarmoset'

	apply plugin: 'java'

	java {
		sourceCompatibility = JavaVersion.VERSION_21
		targetCompatibility = JavaVersion.VERSION_21
	}

	repositories {
		mavenCentral()
		maven { url = 'https://jitpack.io' }
	}

	tasks.register('allDeps', DependencyReportTask) {}

	ext {
		jetty_version = '12.1.7'
		asm_version = '9.9.1'
		guava_version = '33.5.0-jre'
		jackson_core_version = '3.1.1'
		jackson_databind_version = '3.1.1'
		jackson_annotations_version = '2.21'
		javassist_version = '3.30.2-GA'
		mortbay_apache_jsp = '10.1.48'
		commons_beanutils_version = '1.11.0'
		commons_io_version = '2.18.0'
		commons_text_version = '1.15.0'
		commons_lang3_version = '3.20.0'
		commons_csv_version = '1.14.1'
		daemon_version = '0.8'
		reflections_version = '0.10.2'
		mariadb_java_client_version = '3.5.7'
		slf4j_version = '2.0.17'
		log4j_version = '2.25.3'
		jakarta_servlet_version = '6.1.0'
		jakarta_servlet_jsp_api = '3.1.1'
		jakarta_annotation_api_version = '3.0.0'
		jakarta_servlet_jsp_jstl_api = '3.0.0'
		jakarta_servlet_jsp_jstl = '3.0.1'
	}
}